重构ESIndexer：forEach改为for循环，successCount改为int变量